--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
 
   <div id="map"></div>
 
+  <div id="overlay">
+    <div id="splash">
+      <img src="img/logo.png" alt="" class="logo" />
+      <h1>Bikeshare Odds</h1>
+      <div class="scroller">
+        <p style="text-align: center;">How early must you get to the station to snag a bike?</p>
+      </div>
+      <button>Get Started</button>
+    </div>
+  </div>
+
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.9.1.min.js"><\/script>')</script>
