Updated data link to use opendcdata

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="scroller">
                 <p>How early must you get to the station to snag a bike?</p>
                 <p>Using more than a year of historical data, Bikeshare Odds will tell you what the chances are that your neighborhood bikeshare station will have a bike at a given time.</p>
-                <p>This is a project of the merry civic hackers of <a href="http://codefordc.org" target="_blank">Code for DC</a>. Thanks to <a href="http://dssg.io" target="_blank">DSSG</a> for the <a href="https://github.com/dssg/bikeshare" target="_blank">data</a>.</p>
+                <p>This is a project of the merry civic hackers of <a href="http://codefordc.org" target="_blank">Code for DC</a>. Thanks to <a href="http://dssg.io" target="_blank">DSSG</a> for the <a href="http://opendatadc.org/dataset/capital-bikeshare-dock-history" target="_blank">data</a>.</p>
             </div>
             <button type="button" class="overlay-toggle">Get Started</button>
         </div>
