Multiple data sets and animation

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             <h1>Bikeshare Odds</h1>
             <div class="scroller">
                 <p>How early must you get to the station to snag a bike?</p>
-                <p>Using more than a year of historical data, Bikeshare Odds will tell you what the chances are that your neighborhood bikeshare station will have a bike at a given time.</p>
+                <p>Using historical data from October 2010 to September 2013, Bikeshare Odds will tell you what the chances are that your neighborhood bikeshare station will have a bike at a given time.</p>
                 <p>This is a project of the merry civic hackers of <a href="http://codefordc.org" target="_blank">Code for DC</a>. Thanks to <a href="http://dssg.io" target="_blank">DSSG</a> for the <a href="http://opendatadc.org/dataset/capital-bikeshare-dock-history" target="_blank">data</a>.</p>
             </div>
             <button type="button" class="overlay-toggle">Get Started</button>
         </div>
-        <a href="https://github.com/cmgiven/bikeshare-odds">
+        <a href="https://github.com/cmgiven/bikeshare-odds" target="_blank">
             <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub">
         </a>
     </div>
